--- a/project.html
+++ b/project.html
@@ -40,7 +40,7 @@
 
   <footer>
     <ul>
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a class="active">Projects</a></li>
       <li>Resume</li>
     </ul>
