--- a/project.html
+++ b/project.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 <title>Hill's Projects</title>
 <head>
   <link href="styles/styleFooter.css" style="text/css" rel="stylesheet" />
   <link href="styles/styleProject.css" style="text/css" rel="stylesheet" />
   <link href="styles/styleFont.css" style="text/css" rel="stylesheet" />
+  <title> Hill's Projects </title>
 </head>
 
 <body>
