--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
       <h4> <i> UCSB - Computer Engineering 2021 </i> </h4>
 
-      <p> Hello! I am an undergraduate Computer Engineering student looking for an internship for software engineering. I am very enthusiastic about finding an area in software engineering to specialize in. Please check out my project list and my resume. If you have any question or feedback, you can contact me through my email below. </p>
+      <p> Hello! I am an undergraduate Computer Engineering student looking for an internship for software engineering. I am very passionate about specializing in the software field. Please check out my projects, course, and my resume. If you have any question or feedback, I can be reach through my email listed below. </p>
       <p>
-        Thank You!
+        <i>Thank You!</i>
       </p>
       <div class="contact">
         <a href="mailto:junfengxiong@ucsb.edu"><i class="fas fa-envelope" style="font-size: 2.5rem"></i>
@@ -33,7 +33,8 @@
       <ul>
         <li><a class="active">Home</a></li>
         <li><a href="project.html">Projects</a></li>
-        <li>Resume</li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="https://drive.google.com/file/d/1jKm4Fq0VCZ1H9FfGNWz_tjg_Ek0McrjI/view?usp=sharing">Resume</a></li>
       </ul>
     </footer>
   </body>
