--- a/project.html
+++ b/project.html
@@ -44,7 +44,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a class="active">Projects</a></li>
-      <li>Resume</li>
+      <li><a href="courses.html">Courses</a></li>
+      <li><a href="https://drive.google.com/file/d/1jKm4Fq0VCZ1H9FfGNWz_tjg_Ek0McrjI/view?usp=sharing">Resume</a></li>
     </ul>
   </footer>
 
