Added a sentence to project.html

--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
         <td><img src="images/html&css.jpg" width="300px" height="250px" /></td>
         <td class="description">
           <h3>Web Development</h3>
-          <p>Learned HTML and CSS and built this website as a hobby. This website is very primitive at this stage, but I am going to improve it as my skill mature.
+          <p>Learned HTML and CSS and built this website as a hobby. This website is very primitive at this stage, but I am going to improve it as my skill mature. Compatibility with mobile coming soon.
           </p>
           <i> Date: March 28, 2019 - Current </i>
         </td>
