--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
         </td>
       </tr>
       <tr>
-        <td><img src="" width="300px" height="250px" /></td>
+        <td><img src="images/project2.png" width="300px" height="250px" /></td>
         <td class="description">
           <h3>Search Function with OOP C++</h3>
           <p>Wrote two version of search function: one with bag class and one with linked list. This is a project for my CS course which help me developed an interest in software engineering. Nothing is more rewarding than arriving at my solution after tens of hours of trial and error.
