Updated courses/project and new link to resume 2020 Jan

--- a/courses.html
+++ b/courses.html
@@ -19,40 +19,40 @@
         <th class="second"><i> Course Description </i></th>
       </tr>
       <tr>
-        <td>CS 32 <i>(in progress)</i></td>
-        <td>C++ with emphasis on algorithm analysis</td>
+        <td>CS 176A</td>
+        <td>Computer Networking course teaching internet protocol (e.g. TCP/UDP, link layer, physical layer, network layer, etc)</td>
       </tr>
       <tr>
-        <td> ECE 152A <i>(in progress)</i> </td>
-        <td>Circuit design using Verlog, FPGA, and logic gates</td>
-      </tr>
-      <tr>
-        <td> ECE 10C <i>(in progress)</i> </td>
-        <td>Circuit course dealing with capacitors and inductors</td>
+        <td>CS 130A/B</td>
+        <td>Advance Algorithm and Data Structure courses dealing with trees (e.g. red-black, AVL, splay, B-tree, etc.), divide-N-conquer, greedy, DP, and randomized algorithm.</td>
       </tr>
       <tr>
         <td>CS 40</td>
         <td>Discrete math course with emphasis on counting, logic theory, proofs, and big O analysis</td>
       </tr>
       <tr>
-        <td>CS 24</td>
-        <td>C++ with emphasis on linked list and class</td>
+        <td>CS 16/24/32 </td>
+        <td>Series of introductory C++ courses dealing with basic C++ concept such as: linked list, OOP, and algorithm/data structure analysis (e.g. merge/quick sort, heap, hash table, map, sets, etc)</td>
       </tr>
       <tr>
-        <td>CS 16</td>
-        <td>Basic CS course teaching the basic usuage of C++ including syntax</td>
+        <td> ECE 178 </td>
+        <td>Image processing course teaching about using signal processing technique (e.g. fourier transform, Radon transform, etc) and content-aware (e.g. Seam-Carving and Patch Match) to manipulate image. </td>
+      </tr>
+      <tr>
+        <td> ECE 154A </td>
+        <td>Computer Architecture course teaching how a processor function (e.g. ALU, cache, pipeline stages, etc). </td>
+      </tr>
+      <tr>
+        <td> ECE 152A </td>
+        <td>Circuit design using Verlog, FPGA, and logic gates</td>
       </tr>
       <tr>
         <td> ECE 15A </td>
         <td>Basic circuit design course dealing with gate level design</td>
       </tr>
       <tr>
-        <td> ECE 10B </td>
-        <td>Circuit course dealing with transistors (e.g. MOSFET and BJT), OP-AMP, and small signal analysis (circuit gain)</td>
-      </tr>
-      <tr>
-        <td> ECE 10A </td>
-        <td>Circuit course dealing with linear elements such as resistors, voltage source, and current source</td>
+        <td> ECE 10A/B/C  </td>
+        <td>Series of introductory circuit analysis courses</td>
       </tr>
     </table>
 
@@ -61,7 +61,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="project.html">Projects</a></li>
         <li><a class="active">Courses</a></li>
-        <li><a href="https://drive.google.com/file/d/1jKm4Fq0VCZ1H9FfGNWz_tjg_Ek0McrjI/view?usp=sharing">Resume</a></li>
+        <li><a href="https://github.com/xempst/LaTex-Resume/blob/master/Resume.pdf">Resume</a></li>
       </ul>
     </footer>
 </body>
