--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a class="active">Home</a></li>
         <li><a href="project.html">Projects</a></li>
         <li><a href="courses.html">Courses</a></li>
-        <li><a href="https://drive.google.com/file/d/1jKm4Fq0VCZ1H9FfGNWz_tjg_Ek0McrjI/view?usp=sharing">Resume</a></li>
+        <li><a href="https://github.com/xempst/LaTex-Resume/blob/master/Resume.pdf">Resume</a></li>
       </ul>
     </footer>
   </body>
